Revert "[SAM-5469] Fix more bugs"
This reverts commit c072e06a5e42b29d34c22e9bcd6565b759ea7545.

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -5,7 +5,7 @@
     <div>&nbsp;</div>
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
-      <ng-container *ngIf="program && (errorOrganization || logoUrl==null || errorLogo)">
+      <ng-container *ngIf="program && (errorOrganization || logoUrl===null || errorLogo)">
         <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="program && logoUrl && !errorOrganization">
