--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -1,4 +1,7 @@
 <div class="sam-ui-kit">
+  <sam-feedback></sam-feedback>
+
+
   <div class="usa-grid">
     <h2>Accordions Component &lt;samAccordions&gt;</h2>
     <div class="usa-width-one-whole">
