--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -41,6 +41,7 @@
 @import 'components/alphabet-selector';
 @import 'components/history';
 @import 'components/toggle-switch';
+@import 'components/feedback-form';
 
 @import 'pages/entity-object-view';
 @import 'pages/exclusion';
