--- a/src/app/assistance-listing/display-template-demo/demo.page.html
+++ b/src/app/assistance-listing/display-template-demo/demo.page.html
@@ -1,10 +1,4 @@
-<display-page [attr.class]="'opportunity-page usa-grid'" [logoData]="logoData" [sidenavConfig]="sidenavModel">
-
-<div display-alert>
-  <ng-container *ngIf="alert.length > 0">
-    <samAlert id="program-alert" *ngFor="let alertitem of alert" labelname="alertitem.labelname" [type]="alertitem.config.type" [title]="alertitem.config.title" [description]="alertitem.config.description"></samAlert>
-  </ng-container>
-</div>
+<display-page [attr.class]="'opportunity-page usa-grid'" [logoData]="logoData" [sidenavConfig]="sidenavModel" [alerts]="alert">
 
 <div display-title>
   <ng-container *ngIf="program">
