--- a/src/app/app-components/display-page/display-page.template.html
+++ b/src/app/app-components/display-page/display-page.template.html
@@ -12,7 +12,7 @@
     &nbsp;
   </aside>
   <div [attr.class]="contentClass">
-    <ng-container *ngIf="alerts.length > 0">
+    <ng-container *ngIf="alerts && alerts.length > 0">
       <samAlert id="program-alert" *ngFor="let alertitem of alerts" labelname="alertitem.labelname" [type]="alertitem.config.type" [title]="alertitem.config.title" [description]="alertitem.config.description"></samAlert>
     </ng-container>
     <ng-content select="[display-title]"></ng-content>
