--- a/src/app/authentication/profile/migrations/migrations.component.html
+++ b/src/app/authentication/profile/migrations/migrations.component.html
@@ -1,4 +1,4 @@
-<samAlert type="info" class="usa-alert-static" title="Migrate Your Roles" [hidden]="!states.alert">
+<samAlert type="info" class="usa-alert-static" title="Migrate Your Roles">
   If you have a user account at any of the <a (click)="anchorTo('legacy-sites')">web sites</a> that are moving to the new SAM.gov,
   you may migrate your roles and keep your same permissions. <a (click)="anchorTo('top')">Begin Now</a>
 </samAlert>
