--- a/src/styles/components/authentication/_profile.scss
+++ b/src/styles/components/authentication/_profile.scss
@@ -13,6 +13,8 @@
 
   .usa-alert-static {
     width: 100%;
+    margin-top: 0px;
+    top: -34px;
   }
 
   h2 {
@@ -21,5 +23,23 @@
 
   h3:nth-child(1) {
     margin-top: 0em;
+  }
+
+  /*
+   * Responsive
+   */
+  @media screen and (max-width: $large-screen - 1) {
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    .usa-alert-static {
+      position: relative !important;
+      top: 0px;
+      margin-top: 2rem;
+    }
+
+    h2 {
+      margin-top: 2rem;
+    }
   }
 }
