--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -1,14 +1,12 @@
 <h2>Reset Password</h2>
 <div>
   <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
-    <fieldset #formControl>
+    <div #formControl>
       <sam-password [currentPassword]="passwordForm.controls.currentPassword" [password]="passwordForm.controls.newPassword"></sam-password>
-    </fieldset>
-    <fieldset>
       <div class="usa-button-controls">
         <button type="submit">Submit</button>
       </div>
-    </fieldset>
+    </div>
     <samAlert [type]="states.alert.type"
               [title]="states.alert.title"
               [hidden]="!states.alert.show"
@@ -19,7 +17,7 @@
   </form>
 </div>
 
-<samAlert class="usa-alert-static" type="info" title="Migrate Your Roles">
+<samAlert class="usa-alert-static" type="info" title="Reset your Password">
   If you have a user account at any of the <a routerLink="/profile/migrations" fragment="legacy-sites">websites</a> that are moving to the new SAM.gov,
   you may migrate your roles and keep your same permissions. <a routerLink="/profile/migrations" fragment="top">Begin Now</a>.
 </samAlert>
