--- a/src/styles/components/authentication/profile/_reset.scss
+++ b/src/styles/components/authentication/profile/_reset.scss
@@ -4,6 +4,14 @@
     transform: translateY(-100%);
   }
 
+  .usa-form-container {
+    > labelwrapper:nth-child(1) {
+      label {
+        margin-top: 0px;
+      }
+    }
+  }
+
   button[type="submit"] {
     margin-top: 0px;
   }
