- Resolve 508 issues on forgot password page

--- a/src/app/authentication/forgot/forgot-confirm.component.html
+++ b/src/app/authentication/forgot/forgot-confirm.component.html
@@ -1,12 +1,12 @@
 <div class="usa-grid">
   <div class="usa-width-one-whole">
-    <span class="usa-forgot usa-forgot-initial text-center">
-      <legend class="usa-legend">Email Sent</legend>
+    <span class="usa-forgot usa-forgot-confirm text-center">
+      <h2>Email Sent</h2>
       <div *ngIf="email">We just sent an email to {{ email }}.</div>
 
       <section>
-        <legend>Your Next Steps</legend>
         <ul class="steps">
+          <li class="header">Your Next Steps</li>
           <li>Check your inbox for an email</li>
           <li>Click the password reset link in the email</li>
           <li>Reset your password</li>
