--- a/src/app/authentication/forgot/forgot-main.component.html
+++ b/src/app/authentication/forgot/forgot-main.component.html
@@ -3,7 +3,7 @@
     <div class="usa-forgot-init">
       <form (ngSubmit)="verify()" class="usa-form-large" autocomplete="off">
         <fieldset #form>
-          <h2>Answer your security questions</h2>
+          <legend>Answer your security questions</legend>
           <span>
             Provide the answer to the following question: You have 7 attempts to answer two security
             questions correctly before your account is temporarily locked.
