--- a/src/app/app-components/workspace-layout/workspace-layout.template.html
+++ b/src/app/app-components/workspace-layout/workspace-layout.template.html
@@ -13,7 +13,7 @@
         <div class="usa-width-one" *ngIf="loadFlag">
           <button *ngIf="false" type="button" class="usa-button-link" (click)="toggleFilters($event)"><i [ngClass]="toggleFilterLabel()"></i>&nbsp;Filters</button>
           <p class="showing-results-meta usa-color-text usa-color-text-gray text-right">
-            <list-results-message [total]="totalElements" [currentPage]="currentPage" [showing]="10"></list-results-message>
+            <list-results-message [showing]="10" [currentPage]="currentPage" [total]="totalElements" [suffix]="listMessageSuffix"></list-results-message>
           </p>
         </div>
         <div class="usa-width-one-fourth" *ngIf="false">
@@ -26,8 +26,13 @@
         </div>
       </div>
       <ng-content select="[workspace-content]"></ng-content>
-      <div *ngIf="loadFlag">
+      <div *ngIf="loadFlag" class="usa-grid-full">
         <samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
+      </div>
+      <div class="usa-grid-full" *ngIf="addBtnText">
+        <div class="usa-width-one-whole">
+          <samButton buttonId="test" [buttonText]="addBtnText" (click)="addBtnClickHandler($event)"></samButton>
+        </div>
       </div>
     </div>
   </main>
