state and county filters working now

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -24,7 +24,7 @@
 
                 <!--state drop down-->
                 <samSelect
-                  [(model)]="selectStateModel"
+                  [(model)]="wdStateModel"
                   [name]="selectStateConfig.name"
                   [options]="selectStateConfig.options"
                   [label]="selectStateConfig.label"
@@ -36,7 +36,7 @@
 
                 <!--county drop down-->
                 <samSelect
-                  [(model)]="selectCountyModel"
+                  [(model)]="wdCountyModel"
                   [name]="selectCountyConfig.name"
                   [options]="selectCountyConfig.options"
                   [label]="selectCountyConfig.label"
