--- a/src/app/app-components/workspace-layout/workspace-layout.template.html
+++ b/src/app/app-components/workspace-layout/workspace-layout.template.html
@@ -1,7 +1,4 @@
 <div class="usa-grid">
-  <header class="usa-width-one-whole" [ngClass]="setOffset()">
-    <h1>{{titleText}}</h1>
-  </header>
   <main id="workspace-target" tabindex="-1">
     <aside class="side-filters" [ngClass]="setAsideWidth()">
       <sam-filters-container reset-label-margin=".5rem">
@@ -9,6 +6,9 @@
       </sam-filters-container>
     </aside>
     <div [ngClass]="setMainWidth()">
+      <header class="usa-width-one-whole">
+        <h1>{{titleText}}</h1>
+      </header>
       <div class="usa-grid-full">
         <div class="usa-width-one" *ngIf="loadFlag">
           <button *ngIf="false" type="button" class="usa-button-link" (click)="toggleFilters($event)"><i [ngClass]="toggleFilterLabel()"></i>&nbsp;Filters</button>
