state county and construction type all working now

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -66,7 +66,7 @@
 
                 <!--construction type drop down-->
                 <samSelect
-                  [(model)]="selectConstructModel"
+                  [(model)]="wdConstructModel"
                   [name]="selectConstructConfig.name"
                   [options]="selectConstructConfig.options"
                   [label]="selectConstructConfig.label"
