workspace title change

--- a/src/app/workspace/workspace.template.html
+++ b/src/app/workspace/workspace.template.html
@@ -1,5 +1,5 @@
 <workspace-layout (pageChange)="pageChange($event-1)" [currentPage]="pageNum+1" [totalPages]="totalPages"
-                  [totalElements]="totalCount" [loadFlag]="data.length > 0"  titleText="SAM.gov workspace">
+                  [totalElements]="totalCount" [loadFlag]="data.length > 0"  titleText="Sam.gov Assistance Listings Workspace">
   <div workspace-sidebar></div>
   <div workspace-content>
     <div *ngFor="let row of data">
