--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -61,6 +61,7 @@
 @import 'pages/access';
 @import 'pages/public-profile';
 @import 'pages/wage-determination';
+@import 'pages/assistance-listing-operations';
 
 html, body{
   height: 100%;
