--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -3,24 +3,26 @@
     [label]="'Organizations'"
     [multimode]="true"
     (organization)="onOrganizationsChange($event)"
+    required="true"
   ></agencyPicker>
-  <samSelect name="role" label="Role" (modelChange)="onRoleChange($event)" [options]="roleOptions"></samSelect>
-  <samSelect name="domain" label="Domain" (modelChange)="onDomainChange($event)" [options]="domainOptions"></samSelect>
-  <ng-container *ngIf="domain">
-    <div class="m_B-1x"><label>Permissions</label></div>
-    <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
-      <li  *ngFor="let object of objects" class="object-item">
-        <div class="object-title"><strong>{{object.function.val}}</strong></div>
-        <div class="p_L-4x permission-list">
+  <samSelect name="role" label="Role" [model]="role" (modelChange)="onRoleChange($event)" [options]="roleOptions" required="true"></samSelect>
+  <div *ngIf="role && domainOptions">
+    <samSelect name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true"></samSelect>
+    <ng-container *ngIf="objects && objects.length">
+      <div class="m_B-1x"><label>Permissions</label></div>
+      <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
+        <li  *ngFor="let object of objects" class="object-item">
+          <div class="object-title"><strong>{{object.function.val}}</strong></div>
+          <div class="p_L-4x permission-list">
           <span *ngFor="let permission of object.permission" class="permission-control-group">
             <input [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [(ngModel)]="permission.isChecked">
             <label [attr.for]="permissionId(permission, object)" class="permission-label" >{{permission.val}}</label>
           </span>
-        </div>
-      </li>
-    </ul>
-  </ng-container>
-  <p *ngIf="!domain"><em>Select a domain</em></p>
+          </div>
+        </li>
+      </ul>
+    </ng-container>
+  </div>
   <samTextArea name="options-response" label="Messages:" placeholder="(Optional) Include a message with your response" [(value)]="messages"></samTextArea>
   <div>
     <p class="pull-right">
