Awards Object View

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -43,6 +43,7 @@
 @import 'components/toggle-switch';
 @import 'components/well';
 
+@import 'pages/awards';
 @import 'pages/entity-object-view';
 @import 'pages/exclusion';
 @import 'pages/assistance-listing';
