--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -6,7 +6,7 @@
     <br />
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
-      <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
+      <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available" width="160px" height="160px">
 
       <!--Side Navigation-->
       <samSidenav class="m_T-3x" *ngIf="sidenavModel" [model]="sidenavModel" (path)="sidenavPathEvtHandler($event)"></samSidenav>
