--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -4,10 +4,11 @@
     [multimode]="true"
     (organization)="onOrganizationsChange($event)"
     required="true"
+    [searchMessage]="errors.orgs"
   ></agencyPicker>
-  <samSelect name="role" label="Role" [model]="role" (modelChange)="onRoleChange($event)" [options]="roleOptions" required="true"></samSelect>
+  <samSelect name="role" label="Role" [model]="role" (modelChange)="onRoleChange($event)" [options]="roleOptions" required="true" [errorMessage]="errors.role"></samSelect>
   <div *ngIf="role && domainOptions">
-    <samSelect name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true"></samSelect>
+    <samSelect name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true" [errorMessage]="errors.domain"></samSelect>
     <ng-container *ngIf="objects && objects.length">
       <div class="m_B-1x"><label>Permissions</label></div>
       <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
