--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -120,25 +120,28 @@
 						<th scope="col"><b>Agency</b></th>
 						<th scope="col"><b>Procurement Identifier</b></th>
 						<th scope="col"><b>Modification Number</b></th>
-						<th scope="col"><b>Transaction Number</b></th>
+						<th scope="col" *ngIf="awardData.templateType == 'AWARD'"><b>Transaction Number</b></th>
 					</tr>
 					<tr>
-						<td><b>Award ID:</b></td>
+						<td *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'OTA'"><b>Award ID:</b></td>
+						<td *ngIf="awardData.templateType == 'IDV' || awardData.templateType == 'OTI'"><b>IDV ID:</b></td>
 						<td>{{awardData.documentInformation.id.agencyCode}}</td>
 						<td>{{awardData.documentInformation.id.procurementIdentifier}}</td>
 						<td>{{awardData.documentInformation.id.modificationNumber}}</td>
-						<td>{{awardData.documentInformation.id.transactionNumber}}</td>
+						<td *ngIf="awardData.templateType == 'AWARD'">{{awardData.documentInformation.id.transactionNumber}}</td>
 					</tr>
 					<tr>
 						<td><b>Referenced IDV ID:</b></td>
 						<td>{{awardData.documentInformation.referenceId.referenceAgencyCode}}</td>
 						<td>{{awardData.documentInformation.referenceId.referenceProcurementIdentifier}}</td>
 						<td>{{awardData.documentInformation.referenceId.referenceModificationNumber}}</td>
-						<td>{{awardData.documentInformation.referenceId.referenceTransactionNumber}}</td>
+						<td *ngIf="awardData.templateType == 'AWARD'">{{awardData.documentInformation.referenceId.referenceTransactionNumber}}</td>
 					</tr>
 				</table>
 				Reason For Modification: {{awardData.documentInformation.reasonForModification}}<br />
+				<div class="display-inline" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
 				Solicitation ID: {{awardData.documentInformation.solicitationId}}
+				</div>
 				<table>
 					<tr>
 						<th scope="col"></th>
