--- a/src/app/assistance-listing/assistance-listing-operations/assistance-listing-operations.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/assistance-listing-operations.page.html
@@ -1,10 +1,10 @@
 <div class="assistance-listing-operations">
 
-  <div class="usa-grid" *ngIf="submitted">
+  <!--<div class="usa-grid" *ngIf="submitted">
     <div class="usa-width-one-whole">
       <samAlert [type]="'success'" [title]="'Success!!'" [description]="successMsg"></samAlert>
     </div>
-  </div>
+  </div>-->
 
   <div class="usa-grid">
     <!--Sidebar-->
