--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -1,5 +1,6 @@
 <div class="grant-access-page">
   <agencyPicker
+    id="form-top"
     [label]="'Organizations'"
     [multimode]="true"
     (organization)="onOrganizationsChange($event)"
@@ -16,7 +17,7 @@
           <div class="object-title"><strong>{{object.function.val}}</strong></div>
           <div class="p_L-4x permission-list">
           <span *ngFor="let permission of object.permission" class="permission-control-group">
-            <input [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [(ngModel)]="permission.isChecked">
+            <input [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [ngModel]="!permission.notChecked" (click)="onPermissionClick(permission)">
             <label [attr.for]="permissionId(permission, object)" class="permission-label" >{{permission.val}}</label>
           </span>
           </div>
